--- a/Maths-Date&Time Questions/index.html
+++ b/Maths-Date&Time Questions/index.html
@@ -36,6 +36,62 @@
     <h1>Floor Value: <span class="floor"></span> </h1>
     <h1>Ceil Value: <span class="ceil"></span> </h1> -->
 
+<!-- Q.5 -->
+
+<!-- <h1>Input: <span class="input"></span> </h1>
+<h1>Absolute Input: <span class="absolute"></span> </h1> -->
+
+<!-- Q.6 -->
+
+<!-- <h1>Random Dice Value: <span class="dice"></span> </h1> -->
+
+<!-- Q.7 -->
+
+<!-- <h1>Toss Result: <span class="toss"></span> </h1> -->
+
+<!-- Q.8 -->
+
+<!-- <h1>Random number between 1 and 100: <span class="random"></span> </h1> -->
+
+<!-- Q.9 -->
+
+<!-- <h1 class="weight"></h1> -->
+
+<!-- Q.10 -->
+
+<!-- <h1>Result: <span class="result"></span> </h1> -->
+
+<!-- Q.11 -->
+
+<!-- <h1 class="time"></h1> -->
+
+<!-- Q.12 -->
+
+<!-- <h1>Current Month: <span class="month-span"></span> </h1> -->
+
+
+<!-- Q.13 -->
+
+<!-- <h1>Today is <span class="day-span"></span> </h1> -->
+
+
+<!-- Q.14 -->
+
+
+<!-- <h1 class="daySpan"></h1> -->
+
+
+<!-- Q.16 -->
+
+
+
+
+
+
+
+
+
+
 
 
 
