--- a/Maths-Date&Time Questions/index.html
+++ b/Maths-Date&Time Questions/index.html
@@ -81,11 +81,26 @@
 <!-- <h1 class="daySpan"></h1> -->
 
 
-<!-- Q.16 -->
+<!-- Q.18 -->
 
 
+<!-- <h1>Later Date: <span class="date"></span> </h1> -->
+
+<!-- Q.23 -->
+
+<!-- <h1>Your Age is <span class="age"></span> </h1>
+<h1>Your Birth Year is <span class="year"></span> </h1> -->
 
 
+<!-- Q.24 -->
+
+<!-- <h1>Customer Name: <span class="name-span"></span> </h1>
+<h1>Month: <span class="month-span"></span> </h1>
+<h1>Number of units: <span class="units-span"></span> </h1>
+<h1>Charges per unit: <span class="charges-span"></span> </h1>
+<h1>Net Amount Payable (Within Due Date): <span class="total-span"></span> </h1>
+<h1>Late payment srcharge: <span class="extra-span"></span> </h1>
+<h1>Gross Amount Payable (after Due Date): <span class="extra-total-span"></span> </h1> -->
 
 
 
